# Oscillo-Parser

./: CMakeLists.txt  README.md  controlpanel.cpp  controlpanel.h  controlpanel.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  oscillo_channel.cpp  oscillo_channel.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
